[fix: #14] Fix button overflow

--- a/elements/_button.scss
+++ b/elements/_button.scss
@@ -3,6 +3,7 @@
 // =============================================================================
 
 button {
+  overflow: hidden;
 
   //
   // Bordered variant
